# auranote-ai-studio

./: .dockerignore  .gitignore  Cahier des charges.md  Dockerfile  Gemini.md  HANDOFF.md  README.md  deploy.sh  index.html  manifest.webmanifest  package-lock.json  package.json  railway.json  sw.js
.claude/: settings.json
00_PROJECT/: decomposition.md  overview.md
01_ARCHITECTURE/: ai_integration.md  backend.md  database.md  directory_structure.md  frontend.md  general.md  mobile.md  naming_conventions.md  security.md  sync.md
02_FEATURES/: features_index.md
03_TASKS/TASK-001/: README.md  acceptance.md  context.md  dependencies.md  files.md  notes.md  prompt.md  review.md  status.md
03_TASKS/TASK-002/: README.md  acceptance.md  context.md  dependencies.md  files.md  (+4 more)
04_PROMPTS/: prompts_index.md
05_REVIEW/: review_process.md
06_DOCUMENTATION/: developer_guide.md  user_guide.md
07_STATUS/: dashboard.md  roadmap.md
apps/enrichment-py/: README.md  cli.py  pyproject.toml
apps/enrichment-py/auranote_enrich/: __init__.py  __main__.py  analyze.py  cli_entry.py  pipeline.py  text.py
apps/enrichment-py/tests/: test_enrich.py
css/: auras.css  main.css  zen-editor.css
extension/: background.js  content.js  manifest.json
js/: app.js  config.js
premium-product-designer/: SKILL.md  accessibility.md  anti-patterns.md  colors.md  design-system.md  engineering-of-trust.md  examples.md  icons.md  layout.md  motion.md  pages.md  philosophy.md  psychology.md  review-checklist.md  spacing.md  typography.md
scripts/: clean_and_structure.py
server/: index.js
(+120 files in other folders)
