[project]
name = "auranote-enrich"
version = "2.0.0"
description = "Moteur d'enrichissement local AuraNote — nettoyage, segmentation, mots-clés, résumé, classification. 100% stdlib, aucune IA externe."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
auranote-enrich = "auranote_enrich.cli_entry:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auranote_enrich"]
